src/snapshots/enderpy__lexer__tests__snapshot_test_lexer-69.snap
---
source: src/lexer.rs
description: a_
---
[
    Token {
        kind: Identifier,
        value: String(
            "a_",
        ),
    },
]
