src/snapshots/enderpy__lexer__tests__snapshot_test_lexer-7.snap
---
source: src/lexer.rs
description: ()
---
[
    Token {
        kind: LeftParen,
        value: None,
    },
    Token {
        kind: RightParen,
        value: None,
    },
]
