src/snapshots/enderpy__lexer__tests__snapshot_test_lexer-75.snap
---
source: src/lexer.rs
description: 0b1
---
[
    Token {
        kind: Binary,
        value: Number(
            "0b1",
        ),
    },
]
