src/snapshots/enderpy__lexer__tests__snapshot_test_lexer-79.snap
---
source: src/lexer.rs
description: 0b101
---
[
    Token {
        kind: Binary,
        value: Number(
            "0b101",
        ),
    },
]
