src/snapshots/enderpy__lexer__tests__snapshot_test_lexer-8.snap
---
source: src/lexer.rs
description: "[]"
---
[
    Token {
        kind: LeftBrace,
        value: None,
    },
    Token {
        kind: RightBrace,
        value: None,
    },
]
