src/snapshots/enderpy__lexer__tests__snapshot_test_lexer-85.snap
---
source: src/lexer.rs
---
[
    Token {
        kind: Octal,
        value: Number(
            "0o3",
        ),
    },
]
