src/snapshots/enderpy__lexer__tests__snapshot_test_lexer-90.snap
---
source: src/lexer.rs
description: "0x0"
---
[
    Token {
        kind: Hexadecimal,
        value: Number(
            "0x0",
        ),
    },
]
