src/snapshots/enderpy__lexer__tests__snapshot_test_lexer-91.snap
---
source: src/lexer.rs
description: "0x1"
---
[
    Token {
        kind: Hexadecimal,
        value: Number(
            "0x1",
        ),
    },
]
