src/snapshots/enderpy__lexer__tests__snapshot_test_lexer-93.snap
---
source: src/lexer.rs
description: "0x3"
---
[
    Token {
        kind: Hexadecimal,
        value: Number(
            "0x3",
        ),
    },
]
